src/main/java/org/iguanatool/testobject/cparser/CParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CParser.java */
package org.iguanatool.testobject.cparser;

import java.io.File;
import java.io.FileInputStream;
import java.io.IOException;
import java.util.*;

public class CParser/*@bgen(jjtree)*/ implements CParserTreeConstants, CParserConstants {/*@bgen(jjtree)*/
    // Set for storing typedef types
    private static Set<String> types = new HashSet<String>();
    static private int[] jj_la1_0;
    static private int[] jj_la1_1;
    static private int[] jj_la1_2;
    static private int[] jj_la1_3;

    // hack to add special types
    static {
        types.add("__signed__");
        types.add("__const");
        types.add("__inline__");
        types.add("__signed");
        types.add("FILE");
    }

    static {
        jj_la1_init_0();
        jj_la1_init_1();
        jj_la1_init_2();
        jj_la1_init_3();
    }

    final private int[] jj_la1 = new int[75];
    final private JJCalls[] jj_2_rtns = new JJCalls[34];
    final private LookaheadSuccess jj_ls = new LookaheadSuccess();
    /**
     * Generated Token Manager.
     */
    public CParserTokenManager token_source;
    /**
     * Current token.
     */
    public Token token;
    /**
     * Next token.
     */
    public Token jj_nt;
    protected JJTCParserState jjtree = new JJTCParserState();
    SimpleCharStream jj_input_stream;
    // Stack for determining when the parser
    // is parsing a typdef definition.
    private Deque<Boolean> typedefParsingStack = new ArrayDeque<Boolean>();
    private int jj_ntk;
    private Token jj_scanpos, jj_lastpos;
    private int jj_la;
    /**
     * Whether we are looking ahead.
     */
    private boolean jj_lookingAhead = false;
    private boolean jj_semLA;
    private int jj_gen;
    private boolean jj_rescan = false;
    private int jj_gc = 0;
    private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
    private int[] jj_expentry;
    private int jj_kind = -1;
    private int[] jj_lasttokens = new int[100];
    private int jj_endpos;

    public CParser(String fileName) throws IOException {
        this(new File(fileName));
    }

    public CParser(File file) throws IOException {
        this(new FileInputStream(file), null);
    }

    /**
     * Constructor with InputStream.
     */
    public CParser(java.io.InputStream stream) {
        this(stream, null);
    }

    /**
     * Constructor with InputStream and supplied encoding
     */
    public CParser(java.io.InputStream stream, String encoding) {
        try {
            jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
        } catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source = new CParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 75; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor.
     */
    public CParser(java.io.Reader stream) {
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new CParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 75; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor with generated Token Manager.
     */
    public CParser(CParserTokenManager tm) {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 75; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    // Returns the types used in parsing the c source
    public static Set<String> getTypes() {
        return Collections.unmodifiableSet(types);
    }

    private static void jj_la1_init_0() {
        jj_la1_0 = new int[]{0x0, 0x41400000, 0x200000, 0x41400000, 0x84800000, 0x200000, 0x0, 0x0, 0x80000000, 0x0, 0x0, 0x200000, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x80d1000, 0x0, 0x0, 0x0, 0x200000, 0x0, 0x200000, 0x0, 0x0, 0x0, 0x0, 0x80d1000, 0x0, 0x0, 0x0, 0x80d1000, 0x0, 0x0, 0x80d1000, 0x0, 0x3a1d1000, 0x80d1000, 0x3a1d1000, 0x3a1d1000, 0x80d1000, 0x80d1000, 0x80d1000, 0x80d1000, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x80d1000, 0x0, 0x8000000, 0x0, 0x0, 0x0, 0xd1000, 0x0, 0xd1000,};
    }

    private static void jj_la1_init_1() {
        jj_la1_1 = new int[]{0x20100000, 0x1001, 0x20, 0x1001, 0x26cd2, 0x20, 0x100000, 0x100000, 0x10, 0x4000000, 0x8000000, 0x20, 0x4000000, 0x20100000, 0x30100000, 0x100000, 0x100000, 0x4000000, 0x8000000, 0x0, 0x20100000, 0xa0000000, 0x20100000, 0x100000, 0x80000000, 0x20000000, 0x20, 0x0, 0x20, 0x4000000, 0xa0000000, 0x4000000, 0x4000000, 0x21100000, 0xa0000000, 0x0, 0xa0000000, 0x20100000, 0xa0000000, 0xa0000000, 0x20100000, 0xa0000000, 0x219d820c, 0x20100000, 0x219d820c, 0x219d820c, 0x20100000, 0x20100000, 0x20100000, 0x20100000, 0x4000000, 0x8000000, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x20100000, 0x20000000, 0x0, 0x0, 0xa0000000, 0xa0000000, 0x20100000, 0x4000000, 0x0,};
    }

    private static void jj_la1_init_2() {
        jj_la1_2 = new int[]{0x2, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x2, 0x2, 0x0, 0x0, 0x0, 0x0, 0x2, 0x0, 0x0, 0x98040002, 0x0, 0x0, 0x0, 0x0, 0x2, 0x0, 0x0, 0x2, 0x0, 0x0, 0x98040002, 0x2, 0x2, 0x2, 0x98040002, 0x0, 0x0, 0x98040002, 0x0, 0x98040002, 0x98040002, 0x98040002, 0x98040002, 0x98040002, 0x98040002, 0x98040002, 0x98040002, 0x0, 0x1ff8, 0x2000, 0x4000, 0x8000, 0x10000, 0x20000, 0x40000, 0x1f80000, 0x1f80000, 0x6000000, 0x6000000, 0x18000000, 0x18000000, 0x60000002, 0x60000002, 0x98040002, 0x0, 0x98040002, 0x18040002, 0x80000000, 0x80000000, 0x0, 0x0, 0x0,};
    }

    private static void jj_la1_init_3() {
        jj_la1_3 = new int[]{0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x7, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x7, 0x0, 0x0, 0x0, 0x7, 0x0, 0x0, 0x7, 0x0, 0x7, 0x7, 0x7, 0x7, 0x7, 0x7, 0x7, 0x7, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x7, 0x0, 0x7, 0x2, 0x19, 0x19, 0x0, 0x0, 0x0,};
    }

    // Returns true if the given string is
    // a typedef type.
    private boolean isType(String type) {
        return types.contains(type);
    }

    // Add a typedef type to those already defined
    private void addType(String type) {
        types.add(type);
    }

    final public ASTParseUnit ParseUnit() throws ParseException {
                            /*@bgen(jjtree) ParseUnit */
        ASTParseUnit jjtn000 = new ASTParseUnit(JJTPARSEUNIT);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));
        try {
            label_1:
            while (true) {
                ExternalDeclaration();
                if (jj_2_1(1)) {
                } else {
                    break label_1;
                }
            }
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            jjtn000.jjtSetLastToken(getToken(0));

        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
                jjtn000.jjtSetLastToken(getToken(0));
            }
        }
        return jjtn000;
    }

    final public void ExternalDeclaration() throws ParseException {
                              /*@bgen(jjtree) ExternalDeclaration */
        ASTExternalDeclaration jjtn000 = new ASTExternalDeclaration(JJTEXTERNALDECLARATION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));
        try {
            if (jj_2_2(2147483647)) {
                FunctionDefinition();
            } else if (jj_2_3(1)) {
                Declaration();
            } else {
                jj_consume_token(-1);
                throw new ParseException();
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
                jjtn000.jjtSetLastToken(getToken(0));
            }
        }
    }

    final public void FunctionDefinition() throws ParseException {
                             /*@bgen(jjtree) FunctionDefinition */
        ASTFunctionDefinition jjtn000 = new ASTFunctionDefinition(JJTFUNCTIONDEFINITION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));
        try {
            if (jj_2_4(2147483647)) {
                DeclarationSpecifiers();
            } else {
            }
            Declarator();
            if (jj_2_5(1)) {
                DeclarationList();
            } else {
            }
            CompoundStatement();
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
                jjtn000.jjtSetLastToken(getToken(0));
            }
        }
    }

    final public void Declaration() throws ParseException {
                      /*@bgen(jjtree) Declaration */
        ASTDeclaration jjtn000 = new ASTDeclaration(JJTDECLARATION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));
        try {
            DeclarationSpecifiers();
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IDENTIFIER:
                case 61:
                case 65:
                    InitDeclaratorList();
                    break;
                default:
                    jj_la1[0] = jj_gen;
            }
            jj_consume_token(55);
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
                jjtn000.jjtSetLastToken(getToken(0));
            }
        }
    }

    final public void DeclarationList() throws ParseException {
                          /*@bgen(jjtree) DeclarationList */
        ASTDeclarationList jjtn000 = new ASTDeclarationList(JJTDECLARATIONLIST);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));
        try {
            label_2:
            while (true) {
                Declaration();
                if (jj_2_6(2147483647)) {
                } else {
                    break label_2;
                }
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
                jjtn000.jjtSetLastToken(getToken(0));
            }
        }
    }

    final public void DeclarationSpecifiers() throws ParseException {
                                /*@bgen(jjtree) DeclarationSpecifiers */
        ASTDeclarationSpecifiers jjtn000 = new ASTDeclarationSpecifiers(JJTDECLARATIONSPECIFIERS);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));
        try {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case REGISTER:
                case TYPEDEF:
                case EXTERN:
                case STATIC:
                case AUTO:
                    StorageClassSpecifier();
                    if (jj_2_7(2147483647)) {
                        DeclarationSpecifiers();
                    } else {
                    }
                    break;
                default:
                    jj_la1[1] = jj_gen;
                    if (jj_2_10(1)) {
                        TypeSpecifier();
                        if (jj_2_8(2147483647)) {
                            DeclarationSpecifiers();
                        } else {
                        }
                    } else {
                        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                            case VOLATILE:
                            case CONST:
                                TypeQualifier();
                                if (jj_2_9(2147483647)) {
                                    DeclarationSpecifiers();
                                } else {
                                }
                                break;
                            default:
                                jj_la1[2] = jj_gen;
                                jj_consume_token(-1);
                                throw new ParseException();
                        }
                    }
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) throw (RuntimeException) jjte000;
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) throw (ParseException) jjte000;
                }
            }
            {
                if (true) throw (Error) jjte000;
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
                jjtn000.jjtSetLastToken(getToken(0));
            }
        }
    }

    final public void StorageClassSpecifier() throws ParseException {
                                /*@bgen(jjtree) StorageClassSpecifier */
        ASTStorageClassSpecifier jjtn000 = new ASTStorageClassSpecifier(JJTSTORAGECLASSSPECIFIER);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));
        try {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case AUTO:
                    jj_consume_token(AUTO);
                    break;
                case REGISTER:
                    jj_consume_token(REGISTER);
                    break;
                case STATIC:
                    jj_consume_token(STATIC);
                    break;
                case EXTERN:
                    jj_consume_token(EXTERN);
                    break;
                case TYPEDEF:
                    jj_consume_token(TYPEDEF);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
                    jjtn000.jjtSetLastToken(getToken(0));
                    typedefParsingStack.addFirst(Boolean.TRUE);
                    break;
                default:
                    jj_la1[3] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
                jjtn000.jjtSetLastToken(getToken(0));
            }
        }
    }
